<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"

    >


    <ScrollView
        android:id="@+id/scrolly"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/bg_imageview"
                android:layout_width="0dp"
                android:layout_height="0dp"

                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
           android:background="@mipmap/savannah"
                android:alpha="0.14"/>

            <com.hsalf.smilerating.SmileRating
                android:id="@+id/smile_rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="8dp"
                app:layout_constraintBottom_toTopOf="@+id/top1guideline"
                app:layout_constraintTop_toBottomOf="@+id/rating_label"
                tools:layout_editor_absoluteX="0dp" />



            <ImageView
                android:id="@+id/dest_img"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:src="@drawable/ic_placeholder"
                app:layout_constraintBottom_toTopOf="@+id/topguideline2"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:background="@drawable/image_borders"
                app:layout_constraintTop_toTopOf="@+id/top1guideline"
                tools:srcCompat="@drawable/ic_placeholder" />

            <Button
                android:id="@+id/send_comment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="149dp"
                android:layout_marginEnd="8dp"
                android:background="@drawable/button_shape"
                android:text="@string/ratings"
                android:textColor="#99610B0B"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/description"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:layout_marginBottom="30dp"
                android:textColor="#00574B"
                android:textStyle="bold"
                app:layout_constraintBottom_toTopOf="@+id/comments_label"
                app:layout_constraintEnd_toStartOf="@+id/guideline10"
                app:layout_constraintHorizontal_bias="0.498"
                app:layout_constraintStart_toStartOf="@+id/guideline9"
                app:layout_constraintTop_toBottomOf="@+id/dest_img" />

            <AutoCompleteTextView
                android:id="@+id/comment_entry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="7dp"
                android:layout_marginEnd="120dp"
                android:layout_marginBottom="8dp"
                android:hint="@string/post_a_comment_too"
                app:layout_constraintBottom_toTopOf="@+id/send_comment"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline9"
                app:layout_constraintTop_toBottomOf="@+id/comments" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/top1guideline"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.24" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline0top"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.1" />

            <TextView
                android:id="@+id/rating_label"
                android:layout_width="0dp"
                android:layout_height="31dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:text="@string/deal_label_val"
                android:textColor="#000000"
                android:textSize="24sp"
                android:textStyle="bold"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/guideline9"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/topguideline2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                app:layout_constraintGuide_percent="0.6" />

            <TextView
                android:id="@+id/comments"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:background="#8DF8EDC9"
                android:textColor="#008577"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/comments_label" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.25" />

            <androidx.constraintlayout.widget.Guideline
                android:id="@+id/guideline10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                app:layout_constraintGuide_percent="0.78" />

            <TextView
                android:id="@+id/comments_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_marginTop="21dp"
                android:layout_marginEnd="8dp"
                android:text="@string/comment_label"
                android:textSize="18sp"
                app:layout_constraintBottom_toTopOf="@+id/comments"
                app:layout_constraintEnd_toStartOf="@+id/guideline10"
                app:layout_constraintStart_toStartOf="@+id/guideline9"
                app:layout_constraintTop_toBottomOf="@+id/description" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>
</RelativeLayout>